authorization and authentication endpoints parametrized

--- a/resources/templates/oauth2/login.html
+++ b/resources/templates/oauth2/login.html
@@ -1,7 +1,7 @@
 <html>
     <body>
         <div class="login-container">
-            <form class="pure-form pure-form-aligned" method="post" action="/login">
+            <form class="pure-form pure-form-aligned" method="post" action="{{action}}">
                 <fieldset>
                     {{ csrf|safe }}
 
