garbage-collector renamed to periodic-fn

--- a/config/templates/forms/login.html
+++ b/config/templates/forms/login.html
@@ -1,22 +1,22 @@
 <html>
     <body>
-        <div class="login-container">
-            <form class="pure-form pure-form-aligned" method="post" action="{{action}}">
+        <div>
+            <form method="post" action="{{action}}">
                 <fieldset>
                     {{ csrf|safe }}
 
                     {% if failed? %} failed {% endif %}
 
-                    <div class="pure-control-group">
+                    <div>
                         <label for="username">User name</label>
                         <input name="username" type="text" placeholder="Username" autofocus>
                     </div>
-                    <div class="pure-control-group">
+                    <div>
                         <label for="password">Password</label>
                         <input name="password" type="password" placeholder="Password">
                     </div>
 
-                    <div class="pure-controls">
+                    <div>
                         <button type="submit" class="pure-button pure-button-primary">Submit</button>
                     </div>
                 </fieldset>
