--- a/config/templates/forms/authorize.html
+++ b/config/templates/forms/authorize.html
@@ -1,22 +1,24 @@
 <html>
     <body>
-        <div class="auth-container">
-            <form class="pure-form pure-form-aligned" method="post" action="{{ action-approve }}">
+        <div>
+            <form method="post" action="{{ action-approve }}">
                 <fieldset>
                     {{ csrf|safe }}
 
                     <p>
                         Client <em>{{ client.info }}</em> wants to access your resources:
+
                         <ul>
                         {% for scope in client.scopes %}
                             <li>{{ scope }}</li>
                         {% endfor %}
                         </ul>
+
                         Should authorize?
                     </p>
 
-                    <div class="pure-controls">
-                        <button type="submit" class="pure-button pure-button-primary">Authorize</button>
+                    <div>
+                        <button type="submit">Authorize</button>
                         <a href="{{ action-refuse }}"> refuse </a>
                     </div>
 
