decoupling from mount-based configuration

--- a/resources/templates/cerber/login.html
+++ b/resources/templates/cerber/login.html
@@ -1,7 +1,7 @@
 <html>
     <body>
         <div>
-            <form method="post" action="{{action}}">
+            <form method="post" action="/login">
                 <fieldset>
                     {{ csrf|safe }}
 
