--- a/resources/templates/cerber/authorize.html
+++ b/resources/templates/cerber/authorize.html
@@ -1,7 +1,7 @@
 <html>
     <body>
         <div>
-            <form method="post" action="{{ action-approve }}">
+            <form method="post" action="/approve?{{query-params}}">
                 <fieldset>
                     {{ csrf|safe }}
 
@@ -19,7 +19,7 @@
 
                     <div>
                         <button type="submit">Authorize</button>
-                        <a href="{{ action-refuse }}"> refuse </a>
+                        <a href="/refuse?{{query-params}}"> refuse </a>
                     </div>
 
                 </fieldset>
